--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,8 @@
   <div class="banner" fxLayout="row" fxLayoutAlign="center center">
     <h2>Welcome to your Library</h2>
   </div>
-  <app-add-book></app-add-book>
+  <div class="element-spacer">
+    <app-add-book></app-add-book>
+  </div>
+  <app-book-listings></app-book-listings>
 </div>
