--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,3 +10,7 @@
   border-radius: 8px;
   background: url("https://images.pexels.com/photos/2908984/pexels-photo-2908984.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
 }
+
+.element-spacer {
+  margin-bottom: 40px;
+}
