--- a/src/app/book-listings/book-listings.component.html
+++ b/src/app/book-listings/book-listings.component.html
@@ -1,1 +1,14 @@
-<p>book-listings works!</p>
+<div class="book-card-container" fxLayout="row wrap" fxLayoutGap="1em">
+    <div fxflex="1 0 calc(100% / 4)" class="book-card" fxLayout="row" fxLayoutGap="16px">
+        <div class="bok-card-left">
+            <div class="book-card-cover"></div>
+            Read
+        </div>
+
+        <div class="book-card-detail">
+            <h4>Book Title</h4>
+            <p>Author Name</p>
+            <p>Description</p>
+        </div>
+    </div>
+</div>
