--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <header fxLayout="row" fxLayoutAlign="space-between center" class="header">
     <div class="logo-text">My Library</div>
-    <div class="user-badge">
-
+    <div class="user-info-header" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="8px">
+        <span>Hello, UserName</span>
+        <div class="user-badge"></div>
     </div>
+
 </header>
