Book listing section styling done

--- a/src/app/add-book/add-book.component.html
+++ b/src/app/add-book/add-book.component.html
@@ -4,8 +4,8 @@
         <div fxLayout="row" fxLayoutGap="1.2em" fxLayoutAlign="center start">
             <div fxFlex="2 0 auto" class="text-content-input" fxLayout="column" fxLayoutGap="1em">
                 <div fxLayout="row" fxLayoutGap="8px">
-                    <input class="inputs" placeholder="Please enter Book name">
-                    <input class="inputs" placeholder="Please enter Author name">
+                    <input fxFlex="1 0 0" class="inputs" placeholder="Please enter Book name">
+                    <input fxFlex="1 0 0" class="inputs" placeholder="Please enter Author name">
                 </div>
                 <textarea class="inputs" name="description" id="desc" rows="10">Enter Description</textarea>
                 <input type="file">
